tdf#125778 docxexport: handle pageBreak before TOX

The pagebreak before the TOX was lost in docx
(but not in .doc or .rtf).

Change-Id: I280b0bd19a73db180b65a0937bd0fe809e5dfc6f
Reviewed-on: https://gerrit.libreoffice.org/81979
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>